Remove UseConcMarkSweepGC option